# rust-web-service

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.sqlx/: query-5893ce879eba0d7c323abf77bd1e227458ad9e92fc3ab6d8752e8a1ae9703f38.json  query-8ab19f45d828b21dd9350db899e762acac204c90377cc8abe63a6b30c182e901.json  query-9dc75978bbcd8d5ed33fcac643570664e28e909e0b7ee63448a757b80728fa64.json  query-9f467460590c5272f9e879b790a5c84d35a1357e05cc5bc1dad9c2ec06e38562.json  query-be398c161ef52f248ac1d62a5e160459dca9f28094975c584220ffa03e96af7c.json
migrations/: 20260224003121_create_user_account_table.down.sql  20260224003121_create_user_account_table.up.sql
src/: main.rs
src/config/: authentication.rs  mod.rs  openapi.rs  state.rs
src/controller/: auth_controller.rs  user_controller.rs
src/database/: repository.rs
src/manager/: mod.rs  user_manager.rs
src/middleware/: mod.rs
src/model/: api_response.rs  auth_error.rs  mod.rs  user.rs
src/model/auth/: claims.rs  mod.rs
src/repository/: mod.rs  user_repository.rs
src/services/: auth_service.rs
src/state/: mod.rs  users_api.rs
src/users/: mod.rs  user.rs  user_controller.rs  user_manager.rs  user_repository.rs
src/util/: mod.rs
