[package]
name = "web-service"
version = "0.1.0"
edition = "2024"
description = "A simple rust web server to gain experience with the language and tools"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = "0.4.43"
dotenv = "0.15.0"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
log = "0.4.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
schemars = "0.9.0"

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5.3", features = ["util"] }
